@@ -3,6 +3,7 @@ Revision history for Class::Simple::Readonly::Cached
 0.10
 	Commented out what I believe is legacy code
 	No need to defref $rc twice
+	Calling new on an object now returns a clone rather than setting the defaults in the new object
 
 0.09	Mon Mar 13 18:43:13 EDT 2023
 	Warn if we're caching an object that's already cached, then return
